   manager.conf has been removed.

 * Channel Variables conveyed with a channel no longer contain the name of the
   channel as part of the key field, i.e., ChanVariable(SIP/foo): bar=baz is now
   ChanVariable: bar=baz. When multiple channels are present in a single AMI
   event, the various ChanVariable fields will contain a suffix that specifies
   which channel they correspond to.

* The NewPeerAccount AMI event is no longer raised. The NewAccountCode AMI
  event always conveys the AMI event for a particular channel.

 * All "Reload" events have been consolidated into a single event type. This
   event will always contain a Module field specifying the name of the module
   and a Status field denoting the result of the reload. All modules now issue
   this event when being reloaded.

 * The "ModuleLoadReport" event has been removed. Most AMI connections would
   fail to receive this event due to being connected after modules have loaded.
   AMI connections that want to know when Asterisk is ready should listen for
   the "FullyBooted" event.

 * app_fax now sends the same send fax/receive fax events as res_fax. The
   "FaxSent" event is now the "SendFAX" event, and the "FaxReceived" event is
   now the "ReceiveFAX" event.

 * The MusicOnHold event is now two events: MusicOnHoldStart and
   MusicOnHoldStop. The sub type field has been removed.

 * The JabberEvent event has been removed. It is not AMI's purpose to be a
   carrier for another protocol.

 * The Bridge Manager action's Playtone header now accepts more fine-grained
   options. "Channel1" and "Channel2" may be specified in order to play a tone
   to the specific channel. "Both" may be specified to play a tone to both
   channels. The old "yes" option is still accepted as a way of playing the
   tone to Channel2 only.

 * The AMI 'Status' response event to the AMI Status action replaces the
   BridgedChannel and BridgedUniqueid headers with the BridgeID header to